--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,14 @@
 name: CI
-on: push
+on: 
+  push:
+    branches:
+      - master
+      - main
+  repository_dispatch:
+    types:
+      - release
+      - test
+      - demo
 jobs:
   build:
     runs-on: ubuntu-latest
