--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,27 @@ on:
       - main
   repository_dispatch:
     types:
-      - release
       - test
       - demo
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
