--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,28 +20,28 @@ env:
       }
     }
 jobs:
-  # prepare-matrix:
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     matrix: ${{ steps.set-matrix.outputs.matrix }}
-  #   steps:
-  #     - id: set-matrix
-  #       run: |
-  #         echo ::set-output name=matrix::"${{ env.matrix }}"
-  #         # echo ::set-output name=matrix::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.name }}' `
-  #         # echo ::set-output name=version::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.latest }}\n${{ env.version }}\n${{ env.preview }}' `
-  # matrix:
-  #   runs-on: ubuntu-latest
-  #   needs: 
-  #     - prepare-matrix
-  #   steps:
-  #     - run: echo "${{ toJSON(needs.prepare-matrix.outputs.matrix) }}"
+  prepare-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: |
+          echo ::set-output name=matrix::"${{ env.matrix }}"
+          # echo ::set-output name=matrix::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.name }}' `
+          # echo ::set-output name=version::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.latest }}\n${{ env.version }}\n${{ env.preview }}' `
+  matrix:
+    runs-on: ubuntu-latest
+    needs: 
+      - prepare-matrix
+    steps:
+      - run: echo "${{ needs.prepare-matrix.outputs.matrix }}"
   build:
     # needs: 
     #   - prepare-matrix
     strategy:
       matrix: 
-        image: ${{ fromJSON(env.matrix) }}
+        image: ${{ fromJSON(needs.prepare-matrix.outputs.matrix) }}
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
