--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,21 +4,7 @@ env:
   name: |
     iris-community
     irishealth-community
-  matrix: |
-    {
-      "iris-community:2021.2.0.651.0": {
-        "name": "iris-community",
-        "version": "2021.2.0.651.0"
-      },
-      "iris-community:2022.2.0.334.0": {
-        "name": "iris-community",
-        "version": "2022.2.0.334.0"
-      },
-      "iris-community:2022.1.0.209.0": {
-        "name": "iris-community",
-        "version": "2022.1.0.209.0"
-      }
-    }
+  matrix: '{"iris-community:2021.2.0.651.0":{"name":"iris-community","version":"2021.2.0.651.0"},"iris-community:2022.2.0.334.0":{"name":"iris-community","version":"2022.2.0.334.0"},"iris-community:2022.1.0.209.0":{"name":"iris-community","version":"2022.1.0.209.0"}}'
 jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
@@ -27,7 +13,7 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          echo ::set-output name=matrix::`jq -c '.' <<< $'${{ env.matrix }}' `
+          echo ::set-output name=matrix::${{ env.matrix }}
           # echo ::set-output name=matrix::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.name }}' `
           # echo ::set-output name=version::`jq -Rsc 'split("\n") | map(select(length > 0))' <<< $'${{ env.latest }}\n${{ env.version }}\n${{ env.preview }}' `
   matrix:
