--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,16 @@ jobs:
   prepare-matrix:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      image: ${{ steps.set-matrix.outputs.image }}
     steps:
       - id: set-matrix
         run: |
-          matrix=""
+          image=""
           for n in $name; do
             tags=$(curl -su ":" https://containers.intersystems.com/v2/intersystems/${n}/tags/list | jq -r '.tags[]')
-            for tag in $tags; do matrix+='"'${n}:${tag}'",'; done
+            for tag in $tags; do image+='"'${n}:${tag}'",'; done
           done;
-          echo ::set-output name=matrix::"[${matrix%?}]"
+          echo ::set-output name=image::"[${image%?}]"
   matrix:
     runs-on: ubuntu-latest
     needs: 
@@ -36,7 +36,7 @@ jobs:
       - prepare-matrix
     strategy:
       matrix: 
-        image: ${{ fromJson(needs.prepare-matrix.outputs) }}
+        image: ${{ fromJson(needs.prepare-matrix.outputs.image) }}
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
